# mlfs-book

./: .cache.sqlite  .env  .env.example  .env.swo  .env.swp  .gitignore  CNAME  Makefile  README.md  TODO.rtf  TODOs.md  apikey.txt  output.ipynb  packages.txt  pyproject.toml  requirements-cc.txt  requirements-llm.txt  requirements.txt  stations.json  tasks.py
.github/workflows/: air-quality-daily-2.yml  air-quality-daily.yml  daily.yml  titanic-daily.yml  user-interface.yml
_includes/: titanic.html
_layouts/: template.html
air_quality_model/: model_5.json
airquality/: README.md  noaa_backfill.ipynb  pyproject.toml  requirements.txt  setup-env.sh  setup.sh  tasks.py
airquality/airquality/: synth.py  util.py
airquality/notebooks/: 1_air_quality_feature_backfill.ipynb  2_air_quality_feature_pipeline.ipynb  3_air_quality_training_pipeline.ipynb  4_air_quality_batch_inference.ipynb  5_function_calling.ipynb
airquality/tests/: README.md  __init__.py  conftest.py  test_aqicn_api.py  test_geocoding.py  test_utilities.py  test_visualization.py  test_weather_api.py
aq/: pyvenv.cfg
aq/Scripts/: activate  activate.bat
ccfraud/: AGENT.md  AUTO_RESEARCH.md  README.md  pytest.ini  requirements.txt  setup-env.sh  setup.sh  tasks.py
ccfraud/ccfraud/: 1_data_generator.py  2-feldera-streaming-feature-pipeline.py  2a-mcc-feature.py  2b-ndi-feldera-pipeline.py  2c-ndi-spark-pipeline.py  2d-fan-in-feldera-pipeline.py  2e-fan-in-spark-pipeline.py  2f-merchant-drop-spark-pipeline.py  2g-chargeback-rate-spark-pipeline.py  2h-routing-cost-spark-pipeline.py  3-batch-feature-pipeline.py  data_generator.py  streamlit_app.py  synth_account_ledger.py  synth_disputes.py  synth_merchant_activity.py  synth_money_transfers.py  synth_transactions.py
ccfraud/docs/: SYNTHETIC_DATA_GENERATION.md
ccfraud/notebooks/: 0-data-generation-with-polars.ipynb  1b-synthetic-stream-transactions.ipynb  2-feldera-streaming-feature-pipeline.ipynb  3-batch-feature-pipeline.ipynb  4-training-cc-fraud-pipeline.ipynb  4b-training-catboost-fraud-model.ipynb  4b-training-nn-fraud-model.ipynb  5-mcc-ratio-feature-pipeline.ipynb  README.md  ccfraud-catboost-predictor.py  ccfraud-nn-predictor.py  ccfraud-predictor.py  eda-fraud.ipynb
ccfraud/scripts/: 1a-run-feldera.sh
ccfraud/tests/: README.md  conftest.py  test_cc_trans_fg.py  test_fraud_generation.py  test_transaction_generation.py
data/: Calle Hernando de Zafra.csv  Italy-ViadeiCaduti-Serso.csv  Lokuciewskiego-Warszawa.csv  air-quality-data-holmsjo.csv  air-quality-data-tingsryds-kommun.csv  air-quality-data-vaxjo.csv  air-quality-data-vaxjovagen.csv  air-quality-data-visby17.csv  air-quality-data-visby8.csv  air-quality-data.csv  air-quality-data2.csv  aqi-api-key.txt  campanillas,-malaga-air-quality.csv  carranque,-malaga-air-quality.csv  colaba-mumbai-air-quality.csv  east-lothian musselburgh n high st-air-quality.csv  edinburgh-queensferry road-air-quality.csv  edinburgh-salamander st-air-quality.csv  edinburgh-st leonards-air-quality.csv  el-atabal, malaga-air-quality.csv  gavello-emilia-romagna-air-quality.csv  germany.csv  glasgow-anderston-air-quality.csv  glasgow-broomhill-air-quality.csv  glasgow-burgher-street-air-quality.csv  glasgow-byres-road-air-quality.csv  glasgow-dumbarton-road-air-quality.csv  glasgow-high-street-air-quality.csv  glasgow-kerbside-air-quality.csv  glasgow-nithsdale-road-air-quality.csv  glasgow-townhead-air-quality.csv  goteborg-jarnbrottsgatan.csv  hells-kitchen.csv  helsinki-air-quality.csv  hopsworks-api-key.txt  roma-air-quality.csv  sollentuna-sollentunavägen 192-air-quality.csv  stockholm-hornsgatan 108 gata-air-quality.csv  stockholm-hornsgatan-108.csv  stockholm-st eriksgatan 83-air-quality.csv  (+10 more)
data/rome-all/: arenula,-roma, lazio-air-quality.csv  cinecitta',-roma, lazio-air-quality.csv  cipro,-roma, lazio-air-quality.csv  francia,-roma, lazio-air-quality.csv  rome_9344.csv  rome_9346.csv  rome_9347.csv  rome_9349.csv  villa-ada, roma, lazio-air-quality.csv
docs/: README.md  _config.yml
docs/_includes/: air-quality.html  head.html  map_air_quality.html  map_air_quality2.html  titanic.html
docs/air-quality/: index.html  index.md  index2.md
docs/titanic/: index.md
mlfs/: __init__.py  clean_hopsworks_resources.py  config.py
mlfs/airquality/: air_quality_data_retrieval.py  context_engineering.py  sensors.py  uid_station_info.json  util.py
mlfs/ccfraud/: synth_transactions.py
notebooks/: 1_air_quality_feature_backfill.ipynb  2_air_quality_feature_pipeline.ipynb  3_air_quality_training_pipeline.ipynb  4_air_quality_batch_inference.ipynb  README.md
notebooks/air_quality_model/: model.json
notebooks/airquality/: .cache.sqlite  1_air_quality_feature_backfill.ipynb  1_scale_air_quality_feature_backfill_all_stations.ipynb  99_test.ipynb  (+13 more)
notebooks/ch06/cc-fraud/: Makefile  README.md  pyproject.toml  requirements.txt
notebooks/ch06/cc-fraud/data-simulator/: generate-data.py  generate_historical_data.ipynb  transactions.py
notebooks/ch06/cc-fraud/data_generation/: generate_historical_data.ipynb  transactions.py
notebooks/ch06/cc-fraud/feature-pipeline/: bytewax_profile_activity_5min.py  profiles.ipynb  profiles_activity_5m_setup.ipynb  profiles_last_transaction.ipynb  transaction_stream_simulation.ipynb
notebooks/ch06/cc-fraud/feature-pipeline/features/: transactions.py
notebooks/ch06/cc-fraud/feature_pipeline/: bytewax_profile_activity_5min.py  profiles.ipynb  profiles_activity_5m_setup.ipynb  profiles_last_transaction.ipynb  transaction_stream_simulation.ipynb  transactions.ipynb
notebooks/ch06/cc-fraud/feature_pipeline/features/: transactions.py
notebooks/ch06/cc-fraud/inference-pipeline/: inference_debug.ipynb
notebooks/ch06/cc-fraud/inference_pipeline/: deployment.ipynb  feature_monitoring.ipynb  inference_debug.ipynb
notebooks/ch06/cc-fraud/training-pipeline/: model_training.ipynb
notebooks/ch06/cc-fraud/training_pipeline/: fraud_model_fv.ipynb  model_training.ipynb
other/: requirements.txt  setup-env.sh
titanic/: README.md  requirements.txt  setup-env.sh  setup.sh  tasks.py
(+116 files in other folders)
