[project]
name = "mlfs-book"
version = "0.1.0"
description = "Build AI Systems with a Feature Store"
license = {text = "MIT"}
readme = "README.md"
requires-python = "~=3.11"
authors = [
    { name="Jim Dowling", email="jim@hopsworks.ai" },
]
dependencies = [
    "hopsworks[python,polars,great-expectations]>=4.1.2",
    "feldera>=0.33.0",
    "huggingface-hub==0.24.7",
    "ipykernel>=6.29.5",
    "sentence-transformers==2.2.2",
    "streamlit==1.28.2",
    "email-validator==2.2.0",
    "pydantic-settings>=2.6.1",
    "geopy==2.4.1",
    "openmeteo-requests",
    "requests-cache==1.2.0",
    "retry-requests==2.0.0",
    "xgboost==2.0.3",
    "scikit-learn==1.2.2",
    "plotly",
    "seaborn",
    "nbformat",
    "Faker",
    "matplotlib==3.8.3"
]

#getpass4==0.0.14.1
#transformers==4.38.2
#langchain==0.1.10
#bitsandbytes==0.42.0
#accelerate==0.27.2
#openai==1.14.3

[tool.poe]
executor.type = "uv"

[tool.poe.tasks]
test         = "pytest --cov=my_app"                         # a simple command task
serve.script = "my_app.service:run(debug=True)"              # python script based task


[tool.pytest.ini_options]
addopts = "-v --tb=short"

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools]
packages = ["tests/feature-tests","tests/ai-pipeline-tests"]


# Following styling form https://madewithml.com/courses/mlops/styling/

# Black formatting
[tool.black]
line-length = 150
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

# iSort
[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
virtual_env = "conda"

[tool.flake8]
exclude = "venv"
ignore = ["E501", "W503", "E226"]
# E501: Line too long
# W503: Line break occurred before binary operator
# E226: Missing white space around arithmetic operator

[tool.ruff]
line-length = 120

exclude = ["excluded_file.py"]
lint.select = [
    "E",  # pycodestyle errors (settings from FastAPI, thanks, @tiangolo!)
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
lint.ignore = [
    "E501",  # line too long
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []
